<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, BetaRenoActivity!</string>
    <string name="app_name">BetaReno</string>
    
    <string name="home_btn_create">Submit an Idea</string>
    <string name="home_btn_view">View an Idea</string>
    
    <string name="submit_txt_title">Submit an Idea!</string>
    <string name="submit_txt_what">What should be done?</string>
    <string name="submit_txt_where">Where is this at?</string>
    <string name="submit_txt_who">Who should work on it?</string>
    <string name="submit_txt_picture">Before picture</string>
    <string name="submit_btn_picture">Select</string>
    <string name="submit_chk_planned">Is this planned?</string>
    <string name="submit_btn_submit">Submit Idea!</string>
    <string name="submit_error_what">What should be done cant be blank</string>
    <string name="submit_error_where">The location cant be blank</string>
    
    <string name="DebugMapKey">07q4MxTydblKHLPAPvGoIHjnKNhgKaXAHdYhbJA</string>
    
    
    <!--  Proposal Categories for the Spinner -->
    <string-array name="submit_spin_categories">
        <item>Government</item>
        <item>Myself</item>
        <item>Volunteers</item>
        <item>Community Organization</item>
        <item>Owner of Property</item>
    </string-array>   
</resources>
